test: discount Repository 테스트 + ApplicationType 변환 버그 수정
- Repository 단위 테스트 (Mapper, ConditionBuilder, Adapter) 84개
- Repository 통합 테스트 (JPA + QueryDSL) 37개
- ApplicationType INSTANT↔IMMEDIATE 변환 버그 수정
- Application 테스트 보완 (Coordinator, Validator, ReadManager)
- testFixtures 보강

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>